# kv_cache_sim

./: .gitignore  README.md  project_overview.tex  timeline.md
configs/: evict_lru_small_vram.txt  example_basic.txt  phase8_stress.txt  validation_long_tail.txt  validation_low_load.txt  validation_saturation.txt  validation_vram_high.txt  validation_vram_low.txt
cpp/: CMakeLists.txt
cpp/include/: events.hpp  io_config.hpp  io_output.hpp  io_trace.hpp  rng.hpp  simulator.hpp  types.hpp
cpp/src/: io_config.cpp  io_output.cpp  io_trace.cpp  sim_main.cpp  simulator.cpp
data/: phase8_trace.txt  trace_demo.txt  trace_eviction.txt  validation_long_tail.txt  validation_low_load.txt  validation_saturation.txt  validation_vram_base.txt
python/.mpl_cache/: fontlist-v390.json
python/kvsim/: io.py  metrics.py  plots.py  reports.py  runner.py  sweep.py
python/scripts/: make_batch_reports.py  make_report.py  run_validation_suite.py
python/server/: main.py  requirements.txt
web/: .gitignore  index.html  package-lock.json  package.json
web/src/: App.jsx  styles.css
web/src/components/: KpiCard.jsx  PlotCard.jsx
